--- a/amplify.yml
+++ b/amplify.yml
@@ -1,9 +1,17 @@
 version: 1
+backend:
+  phases:
+    build:
+      commands:
+        - '# Execute Amplify CLI with the helper script'
+        - amplifyPush --simple
 frontend:
   phases:
     preBuild:
       commands:
         - npm install
+        - '# Initialize backend resources'
+        - ./amplify/init-backend.sh
     build:
       commands:
         - npm run build
