--- a/amplify.yml
+++ b/amplify.yml
@@ -1,11 +1,15 @@
 version: 1
+backend:
+  phases:
+    build:
+      commands:
+        - '# Execute Amplify CLI with the helper script'
+        - amplifyPush --simple
 frontend:
   phases:
     preBuild:
       commands:
         - npm install
-        - '# Create backend resources directly'
-        - ./amplify/init-backend.sh
     build:
       commands:
         - npm run build
